--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+spring.config.import=file:env.properties
+spring.datasource.url=jdbc:postgresql://localhost:5432/${PG_DB}
+spring.datasource.username=${PG_USERNAME}
+spring.datasource.password=${PG_PW}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
+spring.jpa.properties.hibernate.default_schema=public
+spring.jpa.hibernate.ddl-auto=update
+
+
+
+
+#server
+server.port=${PORT}
+
+#jwt
+spring.application.jwt.secret=${JWT_SECRET}
+spring.application.jwt.expirationindays=${JWT_EXPIRATION}
+
+#bcrypt
+spring.application.bcrypt.secret=${BCRYPT_SECRET}
