--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.config.import=file:env.properties
-spring.datasource.url=jdbc:postgresql://localhost:5432/${PG_DB}
+spring.datasource.url=jdbc:${URL}
 spring.datasource.username=${PG_USERNAME}
-spring.datasource.password=${PG_PW}
+spring.datasource.password=${PG_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.properties.hibernate.default_schema=public
