--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.default_schema=public
 spring.jpa.hibernate.ddl-auto=update
 
-
-
-
 #server
 server.port=${PORT}
 
@@ -17,6 +14,12 @@ server.port=${PORT}
 spring.application.jwt.secret=${JWT_SECRET}
 spring.application.jwt.expirationindays=${JWT_EXPIRATION}
 
-
 #bcrypt
 spring.application.bcrypt.secret=${BCRYPT_SECRET}
+
+#admin
+user.admin.nome=${ADMIN_NOME}
+user.admin.cognome=${ADMIN_COGNOME}
+user.admin.username=${ADMIN_USERNAME}
+user.admin.email=${ADMIN_EMAIL}
+user.admin.password=${ADMIN_PASSWORD}
