--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,11 @@
 		    <artifactId>opencsv</artifactId>
 		    <version>5.7.1</version>
 		</dependency>
+		<dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.2</version>
+        </dependency>
 	</dependencies>
 
 	<build>
