--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>epicode</groupId>
-	<artifactId>EPIC-ENERGY-SERVICE</artifactId>
+	<artifactId>Capstone.Project</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>EPIC-ENERGY-SERVICE</name>
 	<description>Demo project for Spring Boot</description>
